--- a/prefect/Dockerfile
+++ b/prefect/Dockerfile
@@ -5,4 +5,5 @@ COPY docker-req.txt .
 RUN pip install -r docker-req.txt --trusted-host pypi.python.org --no-cache-dir
 
 COPY flows /opt/prefect/flows
-RUN mkdir -p /opt/prefect/data
+RUN mkdir -p /opt/prefect/data/yellow
+RUN mkdir -p /opt/prefect/data/green
